# game_engine

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
models/: sonic.glb
shaders/: fragment.glsl  grid_fragment.glsl  vertex.glsl
src/: Gizmo.cpp  Gizmo.hpp  Grid.cpp  Grid.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  camera.cpp  camera.hpp  main.cpp
